src/snapshots/aidl_parser__rules__tests__type_list-2.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "List",
  kind: Invalid,
  generic_types: [
    Type(
      name: "int",
      kind: Primitive,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
