src/snapshots/aidl_parser__rules__tests__type_list.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "List",
  kind: List,
  generic_types: [
    Type(
      name: "MyObject",
      kind: Custom,
      symbol_range: "...",
    ),
  ],
  symbol_range: "...",
)
