src/snapshots/aidl_parser__rules__tests__type_list_non_generic.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "List",
  kind: List,
  symbol_range: "...",
)
