src/snapshots/aidl_parser__rules__tests__type_map_non_generic.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "Map",
  kind: Map,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
