src/snapshots/aidl_parser__rules__tests__type_primitive1.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "double",
  kind: Primitive,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
