src/snapshots/aidl_parser__rules__tests__type_primitive2.snap
---
source: src/rules.rs
assertion_line: 562
expression: res

---
Type(
  name: "doublegum",
  kind: unresolved,
  symbol_range: "...",
  full_range: "...",
)
