src/snapshots/aidl_parser__rules__tests__type_string.snap
---
source: src/rules.rs
assertion_line: 570
expression: res

---
Type(
  name: "String",
  kind: string,
  symbol_range: "...",
  full_range: "...",
)
